<resources>
    <string name="app_name">EveryCalc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_here">search here</string>
    <string name="search">search</string>

    <string name="Here">Here</string>
    <string name="search_elements">search elements</string>
    <string name="Search" />
    <string name="frag_name">SubjectMenu</string>
    <string name="area">Area</string>
    <string name="volume">Volume</string>
    <string name="maths">Maths</string>
    <string name="energy">Energy</string>
    <string name="mass">Mass</string>
    <string name="numberSystem">NumberSystem</string>
    <string name="time">Time</string>
    <string name="pressure">Pressure</string>
    <string name="speed">Speed</string>
    <string name="temperature">Temperature</string>
    <string name="angle">Angle</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="more">More</string>
    <string name="Converter">Converter</string>
    <string name="volume_converter">Volume Converter</string>
    <string name="area_converter">Area Converter</string>
    <string name="angle_converter">Angle Converter</string>
    <string name="energy_converter">Energy Converter</string>
    <string name="speed_converter">Speed Converter</string>
    <string name="length">Length</string>
    <string name="currency">Currency</string>
    <string name="physics">Physics</string>
</resources>