<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ConverterMenuFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/subject_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Converter"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:columnCount="2"
                android:rowCount="6">

                <androidx.cardview.widget.CardView
                    android:id="@+id/SimpleInterest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/image1"
                            android:layout_width="300px"
                            android:layout_height="300px"
                            android:layout_margin="10px"
                            android:contentDescription="@string/area"
                            android:src="@drawable/converterarea" />

                        <TextView
                            android:id="@+id/t1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Simple Interest"
                            android:layout_margin="5px"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/CompoundInterest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/image2"
                            android:layout_width="300px"
                            android:layout_height="300px"
                            android:layout_margin="10px"
                            android:contentDescription="@string/volume"
                            android:src="@drawable/convertervolume" />

                        <TextView
                            android:id="@+id/t2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Compound Interest"
                            android:layout_margin="5px"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/angleConverter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/image3"
                            android:layout_width="300px"
                            android:layout_height="300px"
                            android:layout_margin="10px"
                            android:contentDescription="@string/angle"
                            android:src="@drawable/converterangle" />

                        <TextView
                            android:id="@+id/t3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Profit/Loss"
                            android:layout_margin="5px"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/energyConverter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/image4"
                            android:layout_width="300px"
                            android:layout_height="300px"
                            android:layout_margin="10px"
                            android:contentDescription="@string/energy"
                            android:src="@drawable/energy" />

                        <TextView
                            android:id="@+id/t4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="GST"
                            android:layout_margin="5px"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/massConverter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/image5"
                            android:layout_width="300px"
                            android:layout_height="300px"
                            android:layout_margin="10px"
                            android:contentDescription="@string/mass"
                            android:src="@drawable/mass" />

                        <TextView
                            android:id="@+id/t5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5px"
                            android:text="Inflation"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/dataConverter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/image6"
                            android:layout_width="300px"
                            android:layout_height="300px"
                            android:layout_margin="10px"
                            android:contentDescription="Data"
                            android:src="@drawable/binarynumber" />

                        <TextView
                            android:id="@+id/t6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Marginal Cost"
                            android:layout_margin="5px"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/timeConverter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/image7"
                            android:layout_width="300px"
                            android:layout_height="300px"
                            android:layout_margin="10px"
                            android:contentDescription="@string/time"
                            android:src="@drawable/clock" />

                        <TextView
                            android:id="@+id/t7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Elasticity of Demand"
                            android:layout_margin="5px"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/image8"
                            android:layout_width="300px"
                            android:layout_height="300px"
                            android:layout_margin="10px"
                            android:contentDescription="@string/pressure"
                            android:src="@drawable/physicspressure" />

                        <TextView
                            android:id="@+id/t8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="NNP"
                            android:layout_margin="5px"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </GridLayout>


        </ScrollView>

    </LinearLayout>

</ScrollView>